docs-website/versioned_docs/version-2.30/tools/ready-made-tools.mdx
---
title: "Ready-Made Tools"
id: ready-made-tools
slug: "/ready-made-tools"
description: "Ready-made Tools and Toolsets in Haystack provide prebuilt capabilities for common Agent workflows."
---

# Ready-Made Tools

Ready-made Tools and Toolsets provide prebuilt capabilities for common Agent workflows. You can pass them directly to an [Agent](../pipeline-components/agents-1/agent.mdx), use them with a [ToolInvoker](../pipeline-components/tools/toolinvoker.mdx), or inspect their function and parameter schema when you need to customize their behavior.

These are the ready-made Tools and Toolsets available in Haystack:

| Tool or Toolset | Description |
| --- | --- |
| [E2BToolset](ready-made-tools/e2btoolset.mdx) | Gives Agents access to a live E2B cloud sandbox for executing bash commands and managing files. |
| [GitHubFileEditorTool](ready-made-tools/githubfileeditortool.mdx) | Edits files in GitHub repositories. |
| [GitHubIssueCommenterTool](ready-made-tools/githubissuecommentertool.mdx) | Posts comments to GitHub issues. |
| [GitHubIssueViewerTool](ready-made-tools/githubissueviewertool.mdx) | Fetches and parses GitHub issues into documents. |
| [GitHubPRCreatorTool](ready-made-tools/githubprcreatortool.mdx) | Creates pull requests from a fork back to the original repository. |
| [GitHubRepoViewerTool](ready-made-tools/githubrepoviewertool.mdx) | Navigates and fetches content from GitHub repositories. |
| [Mem0MemoryRetrieverTool](ready-made-tools/mem0memorytools.mdx) | Retrieves long-term memories from Mem0 for Agent workflows. |
| [Mem0MemoryWriterTool](ready-made-tools/mem0memorytools.mdx) | Stores long-term memories in Mem0 for future Agent runs. |
